# bx

./: .gitmodules  CMakeLists.txt
.github/workflows/: build_cmake.yml
cmake/: Config.cmake
demo/: CMakeLists.txt
demo/include/: Dummy.hpp
demo/lib/: Dummy.ilk  DummyEditor.ilk
demo/src/: Dummy.cpp
docs/: _config.yml  git-workflow.md  index.md
include/Core/: Module.hpp  Plugin.hpp
include/Engine/Platform/: Window.hpp
include/bx/editor/commands/: transform_cmd.hpp
include/bx/editor/core/: asset_importer.hpp  imgui.hpp
include/bx/editor/gizmos/: spline_gizmo.hpp  transform_gizmo.hpp
include/bx/editor/views/: gameobject_view.hpp  inspector_view.hpp  scene_view.hpp
include/bx/engine/containers/: handle.hpp  handle_map.hpp  lazy_init.hpp  optional.hpp  pool.hpp  tree.hpp
include/bx/engine/core/: application.hpp  data.hpp  ecs.hpp  event.hpp  file.hpp  handle.hpp  handle_pool.hpp  input.hpp  log.hpp  macros.hpp  math.hpp  math.serial.hpp  module.hpp  object.hpp  resource.hpp  resource.serial.hpp  serial.serial.hpp  type.hpp  version.hpp
include/bx/engine/module/: graphics.hpp  imgui.hpp  physics.hpp
include/bx/engine/module/graphics/backend/: graphics_opengl.hpp  graphics_vulkan.hpp
include/bx/engine/module/physics/backend/: physics_bullet.hpp
include/bx/engine/module/window/backend/: window_glfw.hpp
include/bx/engine/modules/: audio.hpp  compute.hpp  graphics.hpp  physics.hpp  script.hpp  window.hpp
include/bx/engine/modules/audio/backend/: audio_portaudio.hpp
include/bx/engine/modules/graphics/: type.hpp
include/bx/engine/modules/graphics/backend/: graphics_opengl.hpp  graphics_vulkan.hpp
include/bx/engine/modules/graphics/backend/opengl/: buffer.hpp  conversion.hpp  graphics_pipeline.hpp  opengl_api.hpp  shader.hpp
include/bx/engine/modules/graphics/backend/vulkan/: Instance.hpp  buffer.hpp  cmd_list.hpp  device.hpp  fence.hpp  graphics_pipeline.hpp  image.hpp  physical_device.hpp  rect2d.hpp  render_pass.hpp  resource_state_tracker.hpp  semaphore.hpp  spirv_compiler.hpp  swapchain.hpp  validation.hpp  vulkan_api.hpp
include/bx/engine/modules/graphics/toolkit/: id_pass.hpp  present.hpp  srgb_to_linear.hpp
include/bx/engine/modules/window/backend/: window_glfw.hpp
include/bx/framework/: gameobject.hpp  gameobject.serial.hpp
include/bx/framework/components/: animator.hpp  animator.serial.hpp  attributes.hpp  attributes.serial.hpp  audio_listener.hpp  audio_listener.serial.hpp  audio_source.hpp  audio_source.serial.hpp  camera.hpp  camera.serial.hpp  character_controller.hpp  character_controller.serial.hpp  collider.hpp  collider.serial.hpp  light.hpp  light.serial.hpp  mesh_filter.hpp  mesh_filter.serial.hpp  mesh_renderer.hpp  mesh_renderer.serial.hpp  rigidbody.hpp  rigidbody.serial.hpp  spline.hpp  spline.serial.hpp  transform.hpp  transform.serial.hpp
include/bx/framework/resources/: animation.hpp  animation.serial.hpp  material.hpp  material.serial.hpp  mesh.hpp  mesh.serial.hpp  shader.hpp  shader.serial.hpp  skeleton.hpp  skeleton.serial.hpp  texture.hpp  texture.serial.hpp
include/bx/framework/systems/: acoustics.hpp  dynamics.hpp  renderer.hpp  renderer.serial.hpp
include/bx/runtime/: game_application.hpp  runtime.hpp
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  Module.cpp  Plugin.cpp
src/Engine/: CMakeLists.txt
src/Engine/Platform/: Window.cpp
src/Framework/: CMakeLists.txt
src/Runtime/: CMakeLists.txt  EditorMain.cpp  GameMain.cpp  Main.cpp
src/bx/editor/core/: asset_importer.cpp  assets.cpp  command.cpp  selection.cpp  toolbar.cpp  view.cpp
src/bx/editor/gizmos/: spline_gizmo.cpp  transform_gizmo.cpp
src/bx/editor/views/: assets_view.cpp  console_view.cpp  data_view.cpp  entity_view.cpp  gameobject_view.cpp  inspector_view.cpp  profiler_view.cpp  scene_view.cpp  settings_view.cpp
src/bx/engine/core/: data.cpp  ecs.cpp  file.cpp  input.cpp  log.cpp  math.cpp  module.cpp  object.cpp  profiler.cpp  resource.cpp  stream.cpp  thread.cpp  time.cpp  uuid.cpp
src/bx/engine/modules/: compute.cpp  graphics.cpp  imgui.cpp  script.cpp  window.cpp
src/bx/engine/modules/audio/backend/: audio_portaudio.cpp
src/bx/engine/modules/graphics/: type.cpp  type_validation.cpp
src/bx/engine/modules/graphics/backend/: _graphics_opengl.cpp  graphics_opengl.cpp  graphics_vulkan.cpp
src/bx/engine/modules/graphics/backend/opengl/: buffer.cpp  conversion.cpp  graphics_pipeline.cpp  shader.cpp  validation.cpp
src/bx/engine/modules/graphics/backend/vulkan/: cmd_list.cpp  cmd_queue.cpp  descriptor_set.cpp  extensions.cpp  fence.cpp  image.cpp  instance.cpp  physical_device.cpp  render_pass.cpp  resource_state_tracker.cpp  semaphore.cpp  shader.cpp  spirv_compiler.cpp  swapchain.cpp  validation.cpp
src/bx/engine/modules/graphics/toolkit/: id_pass.cpp  present.cpp  present_pass.cpp  srgb_to_linear.cpp  srgb_to_linear_pass.cpp
src/bx/engine/modules/physics/backend/: physics_bullet.cpp
src/bx/engine/modules/window/backend/: window_glfw.cpp
src/bx/framework/: gameobject.cpp
src/bx/framework/components/: animator.cpp  attributes.cpp  audio_listener.cpp  audio_source.cpp  camera.cpp  character_controller.cpp  collider.cpp  light.cpp  mesh_filter.cpp  mesh_renderer.cpp  rigidbody.cpp  spline.cpp  transform.cpp
src/bx/framework/resources/: Animation.cpp  Material.cpp  Mesh.cpp  Shader.cpp  Skeleton.cpp  Texture.cpp  material.cpp  mesh.cpp  shader.cpp  texture.cpp
src/bx/framework/systems/: Acoustics.cpp  Dynamics.cpp  Renderer.cpp  _renderer.cpp  dynamics.cpp  renderer.cpp
src/bx/runtime/: editor_application.cpp  editor_runtime.cpp  game_application.cpp  game_runtime.cpp
tests/: CMakeLists.txt  handle_map_test.cpp  hash_map_test.cpp  main.cpp
tools/: make_build.py  make_build_and_upload.py
